--- a/mobile/src/main/res/layout-v21/home_grid_menu.xml
+++ b/mobile/src/main/res/layout-v21/home_grid_menu.xml
@@ -117,15 +117,15 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardElevation="0dp"
-        app:layout_columnSpan="2">
+        app:layout_columnWeight="1">
 
         <Button
             android:id="@+id/button6"
@@ -134,10 +134,36 @@
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
             android:minHeight="100dp"
+            android:text="Η μουσική μου"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white"
+            android:drawableTop="@drawable/ic_play_circle_outline_white_18dp"
+            android:drawableTint="@android:color/white" />
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        app:cardBackgroundColor="@android:color/transparent"
+        app:cardElevation="0dp"
+        app:layout_columnWeight="1">
+
+        <Button
+            android:id="@+id/button7"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
+            android:minHeight="100dp"
             android:text="Οι φίλοι μου"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
-            android:drawableLeft="@drawable/ic_people_white_18dp"
+            android:drawableTop="@drawable/ic_people_white_18dp"
             android:drawableTint="@android:color/white" />
 
     </android.support.v7.widget.CardView>
