--- a/mobile/src/main/res/values-v21/styles.xml
+++ b/mobile/src/main/res/values-v21/styles.xml
@@ -2,7 +2,7 @@
     <style name="AppMaterialTheme" parent="SuperMaterialTheme">
         <!-- Customise for only Lollipop and Above Versions features. -->
 
-        <item name="android:colorControlHighlight">#E8EAF6</item>
+        <item name="android:colorControlHighlight">@color/controlHighlight</item>
         <item name="android:colorButtonNormal">#5C6BC0</item>
         <item name="android:colorControlActivated">#1A237E</item>
     </style>
