Move the home menu options to strings xml Remove description from strings

--- a/mobile/src/main/res/layout-v21/home_grid_menu.xml
+++ b/mobile/src/main/res/layout-v21/home_grid_menu.xml
@@ -30,7 +30,7 @@
                 android:paddingTop="20dp"
                 android:paddingBottom="20dp"
                 android:minHeight="100dp"
-                android:text="Το πρόγραμμα μου"
+                android:text="@string/mySchedule"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
                 android:drawableTop="@drawable/ic_assignment_white_18dp"
@@ -56,7 +56,7 @@
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
             android:minHeight="100dp"
-            android:text="Το Σώμα μου"
+            android:text="@string/myBody"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:drawableTop="@drawable/ic_directions_run_white_18dp"
@@ -82,7 +82,7 @@
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
             android:minHeight="100dp"
-            android:text="Η πρόοδος μου"
+            android:text="@string/myProgress"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:drawableTop="@drawable/ic_trending_up_white_18dp"
@@ -108,7 +108,7 @@
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
             android:minHeight="100dp"
-            android:text="Το Γυμναστήριο μου"
+            android:text="@string/myGym"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:drawableTop="@drawable/ic_fitness_center_white_18dp"
@@ -134,7 +134,7 @@
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
             android:minHeight="100dp"
-            android:text="Η μουσική μου"
+            android:text="@string/myMusic"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:drawableTop="@drawable/ic_play_circle_outline_white_18dp"
@@ -160,7 +160,7 @@
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
             android:minHeight="100dp"
-            android:text="Οι φίλοι μου"
+            android:text="@string/myFriends"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:drawableTop="@drawable/ic_people_white_18dp"
