--- a/mobile/src/main/res/layout/home_grid_menu.xml
+++ b/mobile/src/main/res/layout/home_grid_menu.xml
@@ -24,7 +24,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/description"
+            android:text="@string/app_name"
             android:textColor="@android:color/black"
             android:textSize="15sp"
             android:textStyle="bold"
