Set the toolbar's title (for older devices, <21) Move Επιλογές to strings xml as options Replace layout_marginLeft and layout_marginRight with layout_marginStart and layout_marginEnd Remove drawableTint value FIx the layout for kit kat devices

--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppMaterialTheme" parent="SuperMaterialTheme">
         <!-- Customize your theme here. -->
+        <item name="colorButtonNormal">@color/colorPrimary</item>
     </style>
 
     <style name="SuperMaterialTheme" parent="Theme.AppCompat.Light.NoActionBar">
