--- a/mobile/src/main/res/layout-v21/activity_home.xml
+++ b/mobile/src/main/res/layout-v21/activity_home.xml
@@ -21,7 +21,7 @@
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginStart="11dp"
-            app:title="Επιλογές"
+            app:title="@string/options"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
