--- a/mobile/src/main/res/layout-v21/home_grid_menu.xml
+++ b/mobile/src/main/res/layout-v21/home_grid_menu.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
     android:layout_marginTop="5dp"
     android:layout_weight="2"
     app:columnCount="2"
@@ -15,8 +15,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginTop="10dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardElevation="0dp"
@@ -33,8 +33,7 @@
                 android:text="@string/mySchedule"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
-                android:drawableTop="@drawable/ic_assignment_white_18dp"
-                android:drawableTint="@android:color/white"/>
+                android:drawableTop="@drawable/ic_assignment_white_18dp" />
 
     </android.support.v7.widget.CardView>
 
@@ -42,8 +41,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginTop="10dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardElevation="0dp"
@@ -59,8 +58,7 @@
             android:text="@string/myBody"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
-            android:drawableTop="@drawable/ic_directions_run_white_18dp"
-            android:drawableTint="@android:color/white"/>
+            android:drawableTop="@drawable/ic_directions_run_white_18dp" />
 
     </android.support.v7.widget.CardView>
 
@@ -68,8 +66,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginTop="5dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardElevation="0dp"
@@ -85,8 +83,7 @@
             android:text="@string/myProgress"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
-            android:drawableTop="@drawable/ic_trending_up_white_18dp"
-            android:drawableTint="@android:color/white"/>
+            android:drawableTop="@drawable/ic_trending_up_white_18dp" />
 
     </android.support.v7.widget.CardView>
 
@@ -94,8 +91,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardElevation="0dp"
@@ -111,8 +108,7 @@
             android:text="@string/myGym"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
-            android:drawableTop="@drawable/ic_fitness_center_white_18dp"
-            android:drawableTint="@android:color/white"/>
+            android:drawableTop="@drawable/ic_fitness_center_white_18dp" />
 
     </android.support.v7.widget.CardView>
 
@@ -120,8 +116,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginTop="5dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardElevation="0dp"
@@ -137,8 +133,7 @@
             android:text="@string/myMusic"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
-            android:drawableTop="@drawable/ic_play_circle_outline_white_18dp"
-            android:drawableTint="@android:color/white" />
+            android:drawableTop="@drawable/ic_play_circle_outline_white_18dp" />
 
     </android.support.v7.widget.CardView>
 
@@ -146,8 +141,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardElevation="0dp"
@@ -163,8 +158,7 @@
             android:text="@string/myFriends"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
-            android:drawableTop="@drawable/ic_people_white_18dp"
-            android:drawableTint="@android:color/white" />
+            android:drawableTop="@drawable/ic_people_white_18dp" />
 
     </android.support.v7.widget.CardView>
 
