--- a/mobile/src/main/res/layout-v21/home_grid_menu.xml
+++ b/mobile/src/main/res/layout-v21/home_grid_menu.xml
@@ -49,7 +49,7 @@
         app:layout_columnWeight="1">
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/myBody_button"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="20dp"
@@ -58,7 +58,8 @@
             android:text="@string/myBody"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
-            android:drawableTop="@drawable/ic_directions_run_white_18dp" />
+            android:drawableTop="@drawable/ic_directions_run_white_18dp"
+            android:onClick="navigate"/>
 
     </android.support.v7.widget.CardView>
 
