--- a/mobile/src/main/res/layout/home_grid_menu.xml
+++ b/mobile/src/main/res/layout/home_grid_menu.xml
@@ -48,7 +48,7 @@ app:rowCount="3">
     app:layout_columnWeight="1">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/myBody_button"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="20dp"
