Change the colorControlHighlight for the MoreMenu theme Add a toolbar in my body screen Add the more menu in my body's toolbar

--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
     <style name="MoreMenu" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:background">@android:color/transparent</item>
         <item name="android:textColorPrimary">@color/menu_item_states</item>
-        <item name="colorControlHighlight">@color/controlHighlight</item>
+        <item name="colorControlHighlight">@color/colorPrimary</item>
     </style>
 
 </resources>
