--- a/mobile/src/main/res/layout/activity_body.xml
+++ b/mobile/src/main/res/layout/activity_body.xml
@@ -6,9 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".BodyActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:title="@string/myBody"
+        app:popupTheme="@style/MoreMenu">
+
+    </android.support.v7.widget.Toolbar>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Body Activity"/>
+        android:text="Body Activity"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+
+
 
 </android.support.constraint.ConstraintLayout>
