--- a/mobile/src/main/res/layout/home_grid_menu.xml
+++ b/mobile/src/main/res/layout/home_grid_menu.xml
@@ -57,7 +57,8 @@ app:rowCount="3">
         android:text="@string/myBody"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
-        android:drawableTop="@drawable/ic_directions_run_white_18dp" />
+        android:drawableTop="@drawable/ic_directions_run_white_18dp"
+        android:onClick="navigate"/>
 
 </android.support.v7.widget.CardView>
 
