add some hardcoded body activity's values in strings.xml

--- a/mobile/src/main/res/layout/activity_body.xml
+++ b/mobile/src/main/res/layout/activity_body.xml
@@ -44,7 +44,7 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:text="Gender"
+                    android:text="@string/gender"
                     android:textSize="22dp"
                     android:gravity="center_vertical"
                     android:textStyle="bold"
@@ -81,7 +81,7 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:text="Age"
+                    android:text="@string/age"
                     android:textSize="22dp"
                     android:gravity="center_vertical"
                     android:textStyle="bold"
@@ -118,7 +118,7 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:text="Weight"
+                    android:text="@string/weight"
                     android:textSize="22dp"
                     android:gravity="center_vertical"
                     android:textStyle="bold"
@@ -155,7 +155,7 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:text="Height"
+                    android:text="@string/height"
                     android:textSize="22dp"
                     android:gravity="center_vertical"
                     android:textStyle="bold"
@@ -192,7 +192,7 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:text="Workouts / week"
+                    android:text="@string/workoutsPerWeek"
                     android:textSize="22dp"
                     android:gravity="center_vertical"
                     android:textStyle="bold"
