--- a/mobile/src/main/res/layout/activity_body.xml
+++ b/mobile/src/main/res/layout/activity_body.xml
@@ -48,12 +48,12 @@
                     android:textSize="20sp"
                     android:gravity="center_vertical"
                     android:textStyle="bold"
-                    android:layout_weight="1.4"
+                    android:layout_weight="1.3"
                     />
                 <Spinner
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.6"
+                    android:layout_weight="0.7"
                     android:gravity="center_vertical"
                     android:textSize="20sp"
                     android:entries="@array/genders_array"
@@ -84,15 +84,15 @@
                     android:textSize="20sp"
                     android:gravity="center_vertical"
                     android:textStyle="bold"
-                    android:layout_weight="1.4"
+                    android:layout_weight="1.3"
                     />
                 <Spinner
+                    android:id="@+id/age_spinner"
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.6"
+                    android:layout_weight="0.7"
                     android:gravity="end|center_vertical"
                     android:textSize="20sp"
-                    android:entries="@array/age_array"
                     />
 
             </LinearLayout>
@@ -120,15 +120,15 @@
                     android:textSize="20sp"
                     android:gravity="center_vertical"
                     android:textStyle="bold"
-                    android:layout_weight="1.4"
+                    android:layout_weight="1.3"
                     />
                 <Spinner
+                    android:id="@+id/weight_spinner"
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.6"
+                    android:layout_weight="0.7"
                     android:gravity="center_vertical"
                     android:textSize="20sp"
-                    android:entries="@array/weight_array"
                     />
 
             </LinearLayout>
@@ -156,15 +156,15 @@
                     android:textSize="20sp"
                     android:gravity="center_vertical"
                     android:textStyle="bold"
-                    android:layout_weight="1.4"
+                    android:layout_weight="1.3"
                     />
                 <Spinner
+                    android:id="@+id/height_spinner"
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.6"
+                    android:layout_weight="0.7"
                     android:gravity="center_vertical"
                     android:textSize="20sp"
-                    android:entries="@array/height_array"
                     />
 
             </LinearLayout>
@@ -192,12 +192,12 @@
                     android:textSize="20sp"
                     android:gravity="center_vertical"
                     android:textStyle="bold"
-                    android:layout_weight="1.4"
+                    android:layout_weight="1.3"
                     />
                 <Spinner
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.6"
+                    android:layout_weight="0.7"
                     android:gravity="center_vertical"
                     android:textSize="20sp"
                     android:entries="@array/workouts_per_week_array"
