--- a/mobile/src/main/res/layout/activity_body.xml
+++ b/mobile/src/main/res/layout/activity_body.xml
@@ -51,12 +51,12 @@
                     android:layout_weight="1.3"
                     />
                 <Spinner
+                    android:id="@+id/gender_spinner"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.7"
                     android:gravity="center_vertical"
                     android:textSize="20sp"
-                    android:entries="@array/genders_array"
                     />
 
             </LinearLayout>
@@ -195,13 +195,12 @@
                     android:layout_weight="1.3"
                     />
                 <Spinner
+                    android:id="@+id/workouts_per_week_spinner"
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.7"
                     android:gravity="center_vertical"
-                    android:textSize="20sp"
-                    android:entries="@array/workouts_per_week_array"
-                    />
+                    android:textSize="20sp" />
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
