--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#3e2723</color>
     <color name="controlHighlight">#FFFFFF</color>
+    <color name="colorWarning">#D9534F</color>
+    <color name="colorSuccess">#5CB85C</color>
+    <color name="grey">#e0e0e0</color>
     <!--b71c1c-->
 </resources>
