--- a/mobile/src/main/res/layout/activity_body.xml
+++ b/mobile/src/main/res/layout/activity_body.xml
@@ -8,205 +8,59 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
         android:background="@color/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:title="@string/myBody"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_navigate_before_white_48dp"
         app:popupTheme="@style/MoreMenu"
-        app:navigationIcon="@drawable/ic_navigate_before_white_48dp">
+        app:title="@string/myBody">
 
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
+    <ScrollView
         android:id="@+id/body_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        android:orientation="vertical"
-        >
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
-        <android.support.v7.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            app:contentPadding="10dp"
-            >
+            android:orientation="vertical">
 
-            <LinearLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:weightSum="2"
-                >
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5sp"
+                android:background="@android:color/darker_gray"
+                android:fontFamily="@font/roboto"
+                android:padding="10sp"
+                android:text="Στοιχεία"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:text="@string/gender"
-                    android:textSize="20sp"
-                    android:gravity="center_vertical"
-                    android:textStyle="bold"
-                    android:layout_weight="1.3"
-                    />
-                <Spinner
-                    android:id="@+id/gender_spinner"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.7"
-                    android:gravity="center_vertical"
-                    android:textSize="20sp"
-                    />
+            <include layout="@layout/body_info_top" />
 
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            app:contentPadding="10dp"
-            >
-
-            <LinearLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:weightSum="2"
-                >
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5sp"
+                android:background="@android:color/darker_gray"
+                android:fontFamily="@font/roboto"
+                android:padding="10sp"
+                android:text="Μετρήσεις"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:text="@string/age"
-                    android:textSize="20sp"
-                    android:gravity="center_vertical"
-                    android:textStyle="bold"
-                    android:layout_weight="1.3"
-                    />
-                <Spinner
-                    android:id="@+id/age_spinner"
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.7"
-                    android:gravity="end|center_vertical"
-                    android:textSize="20sp"
-                    />
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-        
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2sp"
-            android:layout_marginStart="5sp"
-            android:layout_marginEnd="5sp"
-            app:contentPadding="10sp"
-            >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:weightSum="2"
-                >
-
-                <TextView
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:text="@string/weight"
-                    android:textSize="20sp"
-                    android:gravity="center_vertical"
-                    android:textStyle="bold"
-                    android:layout_weight="1.3"
-                    />
-                <Spinner
-                    android:id="@+id/weight_spinner"
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.7"
-                    android:gravity="center_vertical"
-                    android:textSize="20sp"
-                    />
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5sp"
-            app:contentPadding="10sp"
-            >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:weightSum="2"
-                >
-
-                <TextView
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:text="@string/height"
-                    android:textSize="20sp"
-                    android:gravity="center_vertical"
-                    android:textStyle="bold"
-                    android:layout_weight="1.3"
-                    />
-                <Spinner
-                    android:id="@+id/height_spinner"
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.7"
-                    android:gravity="center_vertical"
-                    android:textSize="20sp"
-                    />
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2sp"
-            android:layout_marginStart="5sp"
-            android:layout_marginEnd="5sp"
-            app:contentPadding="10sp"
-            >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:weightSum="2"
-                >
-
-                <TextView
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:text="@string/workoutsPerWeek"
-                    android:textSize="20sp"
-                    android:gravity="center_vertical"
-                    android:textStyle="bold"
-                    android:layout_weight="1.3"
-                    />
-                <Spinner
-                    android:id="@+id/workouts_per_week_spinner"
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.7"
-                    android:gravity="center_vertical"
-                    android:textSize="20sp" />
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-        
-    </LinearLayout>
-
-
-
+            <include layout="@layout/body_info_bottom" />
+        </LinearLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
