--- a/mobile/src/main/res/layout/spinner_text_center.xml
+++ b/mobile/src/main/res/layout/spinner_text_center.xml
@@ -5,4 +5,6 @@
     android:layout_height="wrap_content"
     android:paddingBottom="5dp"
     android:paddingTop="5dp"
-    android:gravity="center" />
+    android:gravity="center"
+    android:fontFamily="@font/roboto_thin"
+    android:textSize="14sp" />
