--- a/mobile/src/main/res/layout/activity_my_gym.xml
+++ b/mobile/src/main/res/layout/activity_my_gym.xml
@@ -31,4 +31,47 @@
         app:layout_constraintStart_toStartOf="parent"
         />
 
+    <ScrollView
+        android:id="@+id/my_gym_info"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/place_autocomplete_fragment">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5sp"
+                android:background="@android:color/darker_gray"
+                android:fontFamily="@font/roboto"
+                android:padding="10sp"
+                android:text="@string/info"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
+
+            <include layout="@layout/my_gym_info" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5sp"
+                android:background="@android:color/darker_gray"
+                android:fontFamily="@font/roboto"
+                android:padding="10sp"
+                android:text="@string/subscription"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
+
+            <include layout="@layout/subscription" />
+        </LinearLayout>
+    </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
