Set the input type to number decimal for the my gym subscription edit text Set the place details to the views when selecting one from the autocomplete

--- a/mobile/src/main/res/layout/subscription.xml
+++ b/mobile/src/main/res/layout/subscription.xml
@@ -92,7 +92,8 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:hint="ποσό"
-                android:layout_weight="1.1"/>
+                android:layout_weight="1.1"
+                android:inputType="numberDecimal"/>
 
             <TextView
                 android:layout_width="0sp"
